Switching from string file path to nio Paths.