@@ -64,11 +64,10 @@ public class DefaultDirectoryHierarchy implements FileHierarchy {
 
   private final Path resultTree;
 
-  public DefaultDirectoryHierarchy(String baseDirectory, String gridName) {
+  public DefaultDirectoryHierarchy(Path baseDirectory, String gridName) {
     /* Prepare the base path */
-    String baseDirectoryNormalized =
-        FilenameUtils.normalizeNoEndSeparator(baseDirectory, true) + FILE_SEPARATOR;
-    this.baseDirectory = Paths.get(baseDirectoryNormalized).toAbsolutePath();
+    Path baseDirectoryNormalized = Path.of(FilenameUtils.normalizeNoEndSeparator(baseDirectory.toString(), true));
+    this.baseDirectory = baseDirectoryNormalized.toAbsolutePath();
     this.projectDirectory =
         Paths.get(
                 baseDirectoryNormalized
@@ -81,20 +80,11 @@ public class DefaultDirectoryHierarchy implements FileHierarchy {
         Arrays.stream(SubDirectories.values())
             .collect(
                 Collectors.toMap(
-                    subDirectory ->
-                        Paths.get(
-                            FilenameUtils.concat(
-                                this.projectDirectory.toString(), subDirectory.getRelPath())),
+                    subDirectory -> this.projectDirectory.resolve(subDirectory.getRelPath()),
                     SubDirectories::isMandatory));
 
-    inputTree =
-        Paths.get(
-            FilenameUtils.concat(
-                projectDirectory.toString(), SubDirectories.Constants.INPUT_SUB_TREE));
-    resultTree =
-        Paths.get(
-            FilenameUtils.concat(
-                projectDirectory.toString(), SubDirectories.Constants.RESULT_SUB_TREE));
+    inputTree = projectDirectory.resolve(SubDirectories.Constants.INPUT_SUB_TREE);
+    resultTree = projectDirectory.resolve(SubDirectories.Constants.RESULT_SUB_TREE);
   }
 
   /**
@@ -197,8 +187,8 @@ public class DefaultDirectoryHierarchy implements FileHierarchy {
    * @return An Option to the base directory as a string
    */
   @Override
-  public Optional<String> getBaseDirectory() {
-    return Optional.of(this.baseDirectory.toString());
+  public Optional<Path> getBaseDirectory() {
+    return Optional.of(this.baseDirectory);
   }
 
   /**
@@ -209,7 +199,7 @@ public class DefaultDirectoryHierarchy implements FileHierarchy {
    * @return An Option to the regarding sub directory as a string
    */
   @Override
-  public Optional<String> getSubDirectory(Class<? extends UniqueEntity> cls, String fileSeparator) {
+  public Optional<Path> getSubDirectory(Class<? extends UniqueEntity> cls, String fileSeparator) {
     /* Go through all sub directories and check, if the given class belongs to one of the classes mapped to the sub directories. */
     Optional<SubDirectories> maybeSubDirectory =
         Arrays.stream(SubDirectories.values())
@@ -225,10 +215,8 @@ public class DefaultDirectoryHierarchy implements FileHierarchy {
     } else {
       /* Build the full path and then refer it to the base directory */
       Path fullPath =
-          Paths.get(
-              FilenameUtils.concat(
-                  this.projectDirectory.toString(), maybeSubDirectory.get().getRelPath()));
-      String relPath = this.baseDirectory.relativize(fullPath).toString();
+          Paths.get(this.projectDirectory.toString()).resolve(maybeSubDirectory.get().getRelPath());
+      Path relPath = this.baseDirectory.relativize(fullPath);
 
       return Optional.of(relPath);
     }
@@ -236,7 +224,7 @@ public class DefaultDirectoryHierarchy implements FileHierarchy {
 
   private enum SubDirectories {
     GRID_INPUT(
-        Constants.INPUT_SUB_TREE + FILE_SEPARATOR + "grid" + FILE_SEPARATOR,
+        Constants.INPUT_SUB_TREE.resolve("grid"),
         true,
         Stream.of(
                 LineInput.class,
@@ -247,7 +235,7 @@ public class DefaultDirectoryHierarchy implements FileHierarchy {
                 NodeInput.class)
             .collect(Collectors.toSet())),
     GRID_RESULT(
-        Constants.RESULT_SUB_TREE + FILE_SEPARATOR + "grid" + FILE_SEPARATOR,
+        Constants.RESULT_SUB_TREE.resolve("grid"),
         false,
         Stream.of(
                 LineResult.class,
@@ -257,7 +245,7 @@ public class DefaultDirectoryHierarchy implements FileHierarchy {
                 NodeResult.class)
             .collect(Collectors.toSet())),
     GLOBAL(
-        Constants.INPUT_SUB_TREE + FILE_SEPARATOR + "global" + FILE_SEPARATOR,
+        Constants.INPUT_SUB_TREE.resolve("global"),
         true,
         Stream.of(
                 LineTypeInput.class,
@@ -275,7 +263,7 @@ public class DefaultDirectoryHierarchy implements FileHierarchy {
                 LoadProfileInput.class)
             .collect(Collectors.toSet())),
     PARTICIPANTS_INPUT(
-        Constants.INPUT_SUB_TREE + FILE_SEPARATOR + "participants" + FILE_SEPARATOR,
+        Constants.INPUT_SUB_TREE.resolve("participants"),
         true,
         Stream.of(
                 BmInput.class,
@@ -290,7 +278,7 @@ public class DefaultDirectoryHierarchy implements FileHierarchy {
                 WecInput.class)
             .collect(Collectors.toSet())),
     PARTICIPANTS_RESULTS(
-        Constants.RESULT_SUB_TREE + FILE_SEPARATOR + "participants" + FILE_SEPARATOR,
+        Constants.RESULT_SUB_TREE.resolve("participants"),
         false,
         Stream.of(
                 BmResult.class,
@@ -307,27 +295,27 @@ public class DefaultDirectoryHierarchy implements FileHierarchy {
                 FlexOptionsResult.class)
             .collect(Collectors.toSet())),
     TIME_SERIES(
-        PARTICIPANTS_INPUT.relPath + "time_series" + FILE_SEPARATOR,
+        PARTICIPANTS_INPUT.relPath.resolve("time_series"),
         false,
         Stream.of(TimeSeries.class, TimeSeriesMappingSource.MappingEntry.class)
             .collect(Collectors.toSet())),
     THERMAL_INPUT(
-        Constants.INPUT_SUB_TREE + FILE_SEPARATOR + "thermal" + FILE_SEPARATOR,
+        Constants.INPUT_SUB_TREE.resolve("thermal"),
         false,
         Stream.of(ThermalUnitInput.class, ThermalBusInput.class).collect(Collectors.toSet())),
     THERMAL_RESULTS(
-        Constants.RESULT_SUB_TREE + FILE_SEPARATOR + "thermal" + FILE_SEPARATOR,
+        Constants.RESULT_SUB_TREE.resolve("thermal"),
         false,
         Stream.of(ThermalUnitResult.class).collect(Collectors.toSet())),
     GRAPHICS(
-        Constants.INPUT_SUB_TREE + FILE_SEPARATOR + "graphics" + FILE_SEPARATOR,
+        Constants.INPUT_SUB_TREE.resolve("graphics"),
         false,
         Stream.of(GraphicInput.class).collect(Collectors.toSet()));
-    private final String relPath;
+    private final Path relPath;
     private final boolean mandatory;
     private final Set<Class<?>> relevantClasses;
 
-    public String getRelPath() {
+    public Path getRelPath() {
       return relPath;
     }
 
@@ -339,15 +327,15 @@ public class DefaultDirectoryHierarchy implements FileHierarchy {
       return relevantClasses;
     }
 
-    SubDirectories(String relPath, boolean mandatory, Set<Class<?>> relevantClasses) {
+    SubDirectories(Path relPath, boolean mandatory, Set<Class<?>> relevantClasses) {
       this.relPath = relPath;
       this.mandatory = mandatory;
       this.relevantClasses = Collections.unmodifiableSet(relevantClasses);
     }
 
     private static class Constants {
-      private static final String INPUT_SUB_TREE = "input";
-      private static final String RESULT_SUB_TREE = "results";
+      private static final Path INPUT_SUB_TREE = Paths.get("input");
+      private static final Path RESULT_SUB_TREE = Paths.get("results");
     }
   }
 }
